# astra-ros-save-video

./: CMakeLists.txt  package.xml
src/: main.cpp  video_color.cpp  video_depth.cpp
